Communication step 8. Scope is working. Implementation of ReadStrings is uncorrect, very soon growing CDF file will overflow 1K buffer.

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,14 @@
 build/
 Debug/
 
-# VSC cash
+# VSC and VS
 .vscode/
+.vs/
 
+# Python
+env/
+
+# Miscelanous
 AllDrivers/
 .hide/
-
 GitVersion.h
