Downloading PMCU step 5. Full upgrade is working.

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>MartefH7</name>
 	<comment></comment>
 	<projects>
+		<project>MarticG4</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
